--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,46 +1,46 @@
 .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    color: white;
-  }
-  
-  .logo a {
-    text-decoration: none;
-    color: white;
-    font-size: 1.5rem;
-    font-weight: bold;
-    letter-spacing:0.1em;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  color: white;
+  background-color: #000;
+}
 
-  .logo a:hover {
-    font-style: italic;
-    text-decoration: none;
-    color: white;
-    font-size: 1.5rem;
-    font-weight: bold;
+.logo a {
+  color: white;
+  font-weight: bold;
+  letter-spacing: 0.1em;
+  font-style: italic;
+  font-family: "troglodytepop";
+  font-size: 2em;
+  box-shadow: inset 0 0 0 0 #e3b0c5;
+  margin: 0 -0.25rem;
+  padding: 0 0.25rem;
+  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
 
-    letter-spacing:0.1em;
- 
-  }
+.logo a:hover {
+  box-shadow: inset 200px 0 0 0 #e3b0c5;
+  color: white;
+}
 
-  .nav ul {
-    list-style: none;
-    display: flex;
-    gap: 15px;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .nav a {
-    text-decoration: none;
-    color: white;
-    font-size: 2.5rem;
-    transition: color 0.3s;
-  }
-  
-  .nav a:hover {
-    color: #E3B0C5;
-  }
-  
+.nav ul {
+  list-style: none;
+  display: flex;
+  gap: 15px;
+  margin: 0;
+  padding: 0;
+}
+
+.nav a {
+  text-decoration: none;
+  color: white;
+  font-size: 2.5rem;
+  transition: color 0.3s;
+}
+
+.nav a:hover {
+  box-shadow: none;
+  color: #e3b0c5;
+}
